source/blender/io/wavefront_obj/tests/obj_exporter_tests.cc
@@ -475,6 +475,17 @@ TEST_F(obj_exporter_regression_test, cube_normal_edit)
                                _export.params);
 }
 
+TEST_F(obj_exporter_regression_test, cubes_positioned)
+{
+  OBJExportParamsDefault _export;
+  _export.params.export_materials = false;
+  _export.params.scaling_factor = 2.0f;
+  compare_obj_export_to_golden("io_tests/blend_geometry/cubes_positioned.blend",
+                               "io_tests/obj/cubes_positioned.obj",
+                               "",
+                               _export.params);
+}
+
 TEST_F(obj_exporter_regression_test, suzanne_all_data)
 {
   OBJExportParamsDefault _export;
